
using System.Globalization;

public class Constant 
{
    //TAG
    public const string TAG_PLAYER = "Player";
    public const string TAG_ENEMY = "Enemy";
    public const string TAG_GROUND = "Ground";
    public const string TAG_UNTAGGED = "Untagged";



    //LAYER 
    public const string LAYER_GROUND = "Ground";
    public const string LAYER_ENEMY = "Enemy";
    public const string LAYER_PLAYER = "Player";
    public const string LAYER_UNTAGGED = "Untagged";

    //ANIM
    public const string ANIM_IDLE = "Idle";
    public const string ANIM_RUN = "Run";
    public const string ANIM_ATTACK = "Attack";
    public const string ANIM_SKILL_1 = "Skill_1";
    public const string ANIM_SKILL_2 = "Skill_2";
    public const string ANIM_SKILL_3 = "Skill_3";
    public const string ANIM_DEAD = "Dead";
}
